--- a/star_wars/src/app/entities/components/header/header.component.html
+++ b/star_wars/src/app/entities/components/header/header.component.html
@@ -1,4 +1,7 @@
 <header class="header">
     <h1 class="header_title">STAR WARS</h1>
+    <button (click)="login()">login
+
+    </button>
 </header>   
 
