--- a/star_wars/src/app/entities/components/login/login.component.html
+++ b/star_wars/src/app/entities/components/login/login.component.html
@@ -1,5 +1,13 @@
-<form (ngSubmit)="onSubmit()" #loginForm="ngForm">
-    <input type="email" name="email" ngModel required placeholder="Email">
-    <input type="password" name="password" ngModel required placeholder="Password">
+<div class="login-container">
+  <form (ngSubmit)="onSubmit(loginForm.value)" #loginForm="ngForm">
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" ngModel name="email" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" ngModel name="password" required>
+    </div>
     <button type="submit" [disabled]="!loginForm.valid">Login</button>
   </form>
+</div>
