--- a/star_wars/src/app/entities/components/register/register.component.html
+++ b/star_wars/src/app/entities/components/register/register.component.html
@@ -1,5 +1,13 @@
-<form (ngSubmit)="onSubmit(registerForm.value)" #registerForm="ngForm">
-    <input type="email" name="email" ngModel required placeholder="Email">
-    <input type="password" name="password" ngModel required placeholder="Password">
+<div class="register-container">
+  <form (ngSubmit)="onSubmit(registerForm.value)" #registerForm="ngForm">
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" id="email" ngModel name="email" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" ngModel name="password" required>
+    </div>
     <button type="submit" [disabled]="!registerForm.valid">Register</button>
   </form>
+</div>
