--- a/star_wars/src/app/entities/components/header/header.component.html
+++ b/star_wars/src/app/entities/components/header/header.component.html
@@ -1,5 +1,14 @@
 <header class="header">
-    <h1 class="header_title">STAR WARS</h1>
+    <div class="logos">
+        <img src="../../../../assets/img/png-clipart-logo-file-format-graphics-logo-twitter-hd-angle-logo.png" alt="twiter logo">
+        <img src="../../../../assets/img/png-transparent-reddit-logo-computer-icons-reddit-logo-smiley-internet-forum.png" alt="reddit logo">
+        <img src="../../../../assets/img/gratis-png-logo-de-instagram-logo-iconos-de-computadora-logo-de-instagram-thumbnail.png" alt="instagram logo">
+    </div>
+    <div class="title">
+    <img src="../../../../assets/img/sw_logo_stacked_2x-52b4f6d33087_7ef430af (1).png" alt="logo" class="header_img">
+
+    </div>
+    <div class="login">
     <button (click)="login()">login
 
     </button>
@@ -9,5 +18,7 @@
     <button (click)="register()">register
 
     </button>
+    </div>
+   
 </header>   
 
