--- a/star_wars/src/app/pages/home/home.component.html
+++ b/star_wars/src/app/pages/home/home.component.html
@@ -1,1 +1,39 @@
-<p>home works!</p>
+<div class="star-wars-intro">
+    <div class="crawl">
+      <div class="title">
+        <p>Episodio II</p>
+        <h1>EL ATAQUE DE LOS CLONES</h1>
+      </div>
+      <p>La República Galáctica está
+        sumida en el caos. Los
+        impuestos de las rutas
+        comerciales a los sistemas
+        estelares exteriores están en
+        disputa.
+        </p>
+        <p>
+            Esperando resolver el asunto
+        con un bloqueo de poderosas
+        naves de guerra, la codiciosa
+        Federación de Comercio ha
+        detenido todos los envíos al
+        pequeño planeta de Naboo.
+        </p>
+        <p>
+                  Mientras el Congreso de la
+        República debate
+        interminablemente esta
+        alarmante cadena de
+        acontecimientos, el Canciller
+        Supremo ha enviado en secreto
+        a dos Caballeros Jedi,
+        guardianes de la paz y la justicia
+        en la galaxia, para resolver el
+        conflicto....  
+        </p>
+        
+        
+        
+
+    </div>
+  </div>
