--- a/star_wars/src/app/entities/components/header/header.component.scss
+++ b/star_wars/src/app/entities/components/header/header.component.scss
@@ -3,17 +3,36 @@
 .header{
     width: 100%;
     height: 10%;
-    border: 2px solid $yellow;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 5px 5px 0px 5px;
 
 
-    &_title{
-        letter-spacing: 5px;
-        font-size: 60px;
+    &_img{
+        width: 300px;
+        height: 90px;
         margin: 5px;
 
+    }
+    .logos{
+        width: 25%;
+        background: none;
+    }
+    .logos img{
+        background: none;
+        width: 40px;
+        height: 40px;
+    }
+    .title{
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .login{
+        width: 25%;
+        display: flex;
+        justify-content: end;
     }
 }
