--- a/star_wars/src/app/entities/components/navbar/navbar.component.scss
+++ b/star_wars/src/app/entities/components/navbar/navbar.component.scss
@@ -4,7 +4,7 @@
 
 
 #button{
-    background-color: $background;
+    background: none;
     border: none;
     color: rgb(141, 137, 137);
     cursor: pointer;
@@ -14,10 +14,8 @@
 
 .navbar{
     width: 100%;
+    border-bottom: 2px solid $primary;
     height: 5%;
-    border-left:2px solid $yellow;
-    border-bottom:2px solid $yellow;
-    border-right:2px solid $yellow;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,8 +26,6 @@
         height: 100%;
         display: flex;
         align-items: center;
-        border-left: 2px solid $yellow !important;
-        border-right: 2px solid $yellow !important;
         padding: 0px 10px;
        
     }
@@ -37,7 +33,6 @@
         height: 100%;
         display: flex;
         align-items: center;
-        border-right: 2px solid $yellow !important;
         padding: 0px 10px;
     }
 }
