--- a/star_wars/src/app/pages/components/peliculas/peliculas.component.scss
+++ b/star_wars/src/app/pages/components/peliculas/peliculas.component.scss
@@ -1,4 +1,4 @@
-@import'//star_wars/src/assets/styles/variables.scss';
+@import'../../../../assets/styles/variables.scss';
 
 .container{
     display: flex;
