modificaciones responsable parte 1

--- a/star_wars/src/app/pages/body/body.component.html
+++ b/star_wars/src/app/pages/body/body.component.html
@@ -1,22 +1,25 @@
-<div class="starship">
+<div class="body">
+    <div class="starship object">
     <div class="title">
         <p>STARSHIP</p>
     </div>
     <app-naves></app-naves>
 </div>
 
-<div class="pilots">
+<div class="pilots object">
     <div class="title">
         <p>PILOTS</p>
     </div>
     <app-pilotos></app-pilotos>
 </div>
 
-<div class="films">
+<div class="films object">
     <div class="title">
         <p>FILMS</p>
     </div>
     <app-peliculas></app-peliculas>
+</div>
+
 </div>
 
 
