--- a/star_wars/src/app/pages/components/peliculas/peliculas.component.html
+++ b/star_wars/src/app/pages/components/peliculas/peliculas.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container1">
     @if(films && films.length > 0){
           @for(film of allFilms; track $index){
         <div class="cart">
