--- a/star_wars/src/app/app.component.scss
+++ b/star_wars/src/app/app.component.scss
@@ -3,11 +3,13 @@
     height: 71%;
 }
 
-.container{
-    width: 99%;
-    height: 100dvh;
+.container_img{
+    width: 100%;
+    height: 100vh;
     position: fixed;
-    z-index: 100;
+    top: 0;
+    left: 0;
+    z-index: -1;
     background-image: url(../assets/img/star-wars-backgrounds-14_856985d9.jpeg);
     background-size: cover; 
     background-position: center; 
