--- a/star_wars/src/app/pages/body/body.component.scss
+++ b/star_wars/src/app/pages/body/body.component.scss
@@ -8,3 +8,15 @@
     border-top: 2px solid gray;
     border-bottom: 2px solid gray;
 }
+.body{
+    width: 100%;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.object{
+    margin-left: 3%;
+    margin-right: 3%;
+
+}
