--- a/star_wars/src/app/pages/components/naves/naves.component.html
+++ b/star_wars/src/app/pages/components/naves/naves.component.html
@@ -1,7 +1,7 @@
 
 <div class="container" *ngIf="starship">       
-            <div class="img">
-                <img [src]="imgImp" alt="starship" (error)="imgError()">
+            <div>
+                <img [src]="imgImp"  class='img' alt="starship" (error)="imgError()">
             </div>
             <div  class ="descripcion" id ="nave">
                 <h3> {{starship.name}} </h3>
@@ -12,7 +12,7 @@
                 <p> <strong> Fabricante: </strong> {{starship.manufacturer}} </p >
                 <p> <strong> Velocidad máxima de atmósfera: </strong> {{starship.max_atmosphering_speed}} </p>
                 <p> <strong> Costo en créditos: </strong> {{starship.cost_in_credits}} </p>
-            </div>​​
+                </div>
 
         
 </div>
