--- a/star_wars/src/app/pages/components/naves/naves.component.scss
+++ b/star_wars/src/app/pages/components/naves/naves.component.scss
@@ -1,6 +1,39 @@
-
+@import "../../../../assets/styles/variables.scss";
 
 .container{
     display: flex;
+    margin: 10px;
+    border: 1px solid $primary;
+    border-radius: 25px;
     
+}
+
+.descripcion{
+    background-color: #818080;
+    padding-left:10px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+}
+.img{
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+}
+@media (max-width: 650px){
+    .container{
+        display: flex;
+        flex-direction: column;
+    }
+    .descripcion{
+        border-bottom-left-radius: 25px;
+        border-bottom-right-radius: 25px;
+        border-top-right-radius: 0;
+    }
+    .img{
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+        border-bottom-left-radius: 0;
+    }
+
 }
