--- a/star_wars/src/app/pages/components/pilotos/pilotos.component.html
+++ b/star_wars/src/app/pages/components/pilotos/pilotos.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container1">
     @if(pilots && pilots.length > 0){
         @for(pilot of allPilots; track $index){
             <div class="cart">
