--- a/star_wars/src/app/pages/components/naves/naves.component.html
+++ b/star_wars/src/app/pages/components/naves/naves.component.html
@@ -3,7 +3,7 @@
             <div>
                 <img [src]="imgImp"  class='img' alt="starship" (error)="imgError()">
             </div>
-            <div  class ="descripcion" id ="nave">
+            <div  class ="descripcion text1" id ="nave">
                 <h3> {{starship.name}} </h3>
                 <p> <strong> Modelo: </strong> {{starship.model}} </p>
                 <p> <strong> Clase de nave estelar: </strong> {{starship.starship_class}} </p>
