--- a/star_wars/src/app/app.component.scss
+++ b/star_wars/src/app/app.component.scss
@@ -10,7 +10,7 @@
     top: 0;
     left: 0;
     z-index: -5;
-    background-image: url(https://lumiere-a.akamaihd.net/v1/images/background-stars-desktop_v2_96b6d74a.jpeg?region=0%2C0%2C2048%2C1600);
+    background-image: url(https://cdn.registerdisney.go.com/v4/asset/bundler/STARWARS/v4/images/v1/starwars-background-web.webp);
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
