modificaciones finales parte 1

--- a/star_wars/src/styles.scss
+++ b/star_wars/src/styles.scss
@@ -9,9 +9,8 @@
   }
 
   body {
-    background-color: $background;
+    background-color: black;
     color: $primary;
-    overflow-x: hidden;
-    
+    overflow-x: hidden; 
   }
 
