--- a/star_wars/src/app/entities/components/header/header.component.html
+++ b/star_wars/src/app/entities/components/header/header.component.html
@@ -1,9 +1,21 @@
 <header class="header">
     <div class="logos">
-        <img src="https://lumiere-a.akamaihd.net/v1/images/tiktok-logo-white_dd1a4867.svg?region=0%2C0%2C100%2C100" alt="tiktok logo">
-        <img src="https://static-mh.content.disney.io/matterhorn/assets/utility/social/xlogo_light-66228d1292cd.png" alt="twiter logo">
-        <img src="https://static-mh.content.disney.io/matterhorn/assets/starwars/footer/instagram-white-8d399960b577.svg" alt=" instagram logo">
-    </div>
+        <div class="target_logos">
+            <img class="logo1" src="https://lumiere-a.akamaihd.net/v1/images/tiktok-logo-white_dd1a4867.svg?region=0%2C0%2C100%2C100" alt="tiktok logo">
+
+        </div>
+            <div class="target_logos">
+            <img class="logo1"  src="https://static-mh.content.disney.io/matterhorn/assets/utility/social/xlogo_light-66228d1292cd.png" alt="twiter logo">
+
+            </div>
+            <div class="target_logos">
+            <img class="logo1"  src="https://static-mh.content.disney.io/matterhorn/assets/starwars/footer/instagram-white-8d399960b577.svg" alt=" instagram logo">
+
+            </div>
+
+        
+        
+    </div >
     <div class="title">
     <img src="../../../../assets/img/sw_logo_stacked_2x-52b4f6d33087_7ef430af (1).png" alt="logo" class="header_img">
 
