--- a/star_wars/src/app/entities/components/header/header.component.scss
+++ b/star_wars/src/app/entities/components/header/header.component.scss
@@ -9,6 +9,7 @@
     margin: 5px 5px 0px 5px;
 
 
+
     &_img{
         width: 300px;
         height: 90px;
@@ -18,12 +19,19 @@
     .logos{
         width: 25%;
         background: none;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: start;
+        align-items: center;
     }
-    .logos img{
+    .target_logos{
+        width: 20%;
+        height: auto;
+    }
+    .target_logos img{
         background: none;
-        width: 40px;
-        height: 40px;
-         margin: 4px;
+        max-width: 100%;
+
     }
     .title{
         width: 50%;
