ajustes de validaciones

--- a/star_wars/src/app/entities/components/navbar/navbar.component.html
+++ b/star_wars/src/app/entities/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
 <div class="navbar">
-    <button  id='laser_btn' class="navbar_text1" (click)="pageHome()">HOME</button>
-    <button id='laser_btn'  class="navbar_text2" (click)="pageStarships()">STARSHIPS</button>
+    <button  id='laser_btn' routerLink='/home' routerLinkActive="router-link-active"  class="navbar_text1" >HOME</button>
+    <button id='laser_btn' routerLink='/starships' class="navbar_text2" >STARSHIPS</button>
 </div>
