--- a/star_wars/src/app/entities/components/login/login.component.html
+++ b/star_wars/src/app/entities/components/login/login.component.html
@@ -1,13 +1,19 @@
 <div class="login-container">
   <p>If you're not registered,<a routerLink="/register">click here</a>!</p>
-  <form (ngSubmit)="onSubmit(loginForm.value)" #loginForm="ngForm">
+  <form (ngSubmit)="onSubmit()" [formGroup]="loginForm">
     <div class="form-group">
       <label for="email">Email:</label>
-      <input type="email" id="email" ngModel name="email" required>
+      <input type="email" id="email" formControlName="email" required>
+      <div *ngIf="hasError('email', 'required')" class="alert2">Email is required</div>
+      <div *ngIf="hasError('email', 'email')" class="alert2">Please enter a valid email</div>
     </div>
     <div class="form-group">
       <label for="password">Password:</label>
-      <input type="password" id="password" ngModel name="password" required>
+      <input type="password" id="password" formControlName="password" required>
+      <div *ngIf="hasError('password', 'required')" class="alert2">Password is required</div>
+    </div>
+    <div *ngIf="errorMessage" class="alert">
+      {{ errorMessage }}
     </div>
     <button type="submit" [disabled]="!loginForm.valid">Login</button>
   </form>
