--- a/star_wars/src/app/entities/components/login/login.component.scss
+++ b/star_wars/src/app/entities/components/login/login.component.scss
@@ -36,4 +36,19 @@
         background-color: #ccc;
       }
     }
+    .alert {
+      color: #721c24;
+      background-color: #f8d7da;
+      border-color: #f5c6cb;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 5px;
+    }
+    .alert2 {
+      color: #721c24;
+      background-color: #f8d7da;
+      border-color: #f5c6cb;
+      padding: 10px;
+      border-radius: 5px;
+    }
   }
