--- a/src/app/entities/components/header/header.component.scss
+++ b/src/app/entities/components/header/header.component.scss
@@ -2,87 +2,106 @@
 
 .header{
     width: 100%;
-    height: 10%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin: 5px 5px 0px 5px;
+    padding: 2rem 3rem;
+    margin: 1.5rem auto 0;
+    max-width: 1800px;
 
-
-
-    &_img{
-        width: 300px;
-        height: 90px;
-        margin: 5px;
-
-    }
     .logos{
-        width: 25%;
-        background: none;
+        width: 20%;
         display: flex;
-        flex-wrap: wrap;
-        justify-content: start;
+        gap: 2rem;
         align-items: center;
+        justify-content: flex-start;
+
+        @media (max-width: 600px) {
+            flex-direction: column;
+            margin-left: 1rem;
+        }
     }
     .target_logos{
-        width: 20%;
+        width: auto;
         height: auto;
-    }
-    .target_logos img{
-        background: none;
-        max-width: 100%;
 
+        img{
+            width: 28px;
+            height: 28px;
+            transition: opacity 0.3s ease;
+
+            &:hover {
+                opacity: 0.7;
+            }
+        }
     }
     .title{
-        width: 50%;
+        width: 60%;
         display: flex;
         justify-content: center;
         align-items: center;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+
+        .header_img{
+            width: 280px;
+            height: 85px;
+            margin: 5px;
+        }
     }
     .login{
-        width: 25%;
+        width: 20%;
         display: flex;
-        justify-content: end;
-    }
-    .login_btn{
-        background: none;
-        color: $dimedPrimary;
-        font-size: 20px;
-        border: none;
-        cursor: pointer;
-        padding-right: 30px;
-    }
-    .logout_btn{
-        background: none;
-        color: $dimedPrimary;
-        font-size: 25px;
-        border: none;
-        cursor: pointer;
-        padding-right: 30px;
-    }
-    .log{
-        padding-right: 5px;
-    }
-    @media(max-width:400px){
+        justify-content: flex-end;
+
+        .login_btn, .logout_btn{
+            display: flex;
+            align-items: center;
+            gap: 0.8rem;
+            background: none;
+            color: $dimedPrimary;
+            border: none;
+            cursor: pointer;
+            padding: 0.5rem 1.5rem;
+
+            &:hover {
+                opacity: 0.8;
+            }
+        }
+        .login_btn{
+            font-size: 18px;
+        }
         .logout_btn{
-            padding: 0;
+            font-size: 18px;
+        }
+        .log{
+            width: 22px;
+            height: 22px;
+        }
+        @media(max-width:600px){
+            margin-right: 1rem;
         }
     }
     @media(max-width:600px){
+        padding: 1rem;
+        .title {
+            position: static;
+            transform: none;
+            width: auto;
+        }
         .log{
-            width: 30px;
+            width: 25px;
         }
-        .login_btn{
+        .login_btn, .logout_btn{
             font-size: 0;
-        }
-        .logout_btn{
-            font-size: 0;
-        }
-        .logos{
-            display: flex;
-            flex-direction: column;
+            padding-right: 15px;
         }
     }
-
+    @media(max-width:400px){
+        .logout_btn{
+            padding: 0.5rem;
+        }
+    }
 }
 
