--- a/src/app/entities/components/navbar/navbar.component.scss
+++ b/src/app/entities/components/navbar/navbar.component.scss
@@ -1,63 +1,53 @@
 @import "../../../../assets/styles/variables.scss";
 
+.navbar {
+    width: 100%;
+    border-bottom: 2px solid $primary;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+    margin: 0px 5px 5px 5px;
+}
 
-
-
-#laser_btn{
+#laser_btn {
     background: none;
     border: none;
     color: rgb(141, 137, 137);
     cursor: pointer;
     position: relative;
-}
-#laser_btn::after {
-    content: '';
-    position: absolute;
-    width: 0; 
-    height: 6px;
-    bottom: -13px; 
-    left: 50%; 
-    background-color: $yellow; 
-    transition: all 0.3s ease;
-    box-shadow: 0 0 10px $yellow;
-    border-radius: 100px;
-}
-
-#laser_btn:focus::after {
-    width: 100%; 
-    left: 0; 
-}
-
-
-.navbar{
-    width: 100%;
-    border-bottom: 2px solid $primary;
-    height: 5%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px 5px 5px 5px;
+    font-size: 18px;
+    padding: 10px 20px;
     
+    &::after {
+        content: '';
+        position: absolute;
+        width: 0;
+        height: 3px;
+        bottom: 7px;
+        left: 50%;
+        background-color: $yellow;
+        transition: all 0.3s ease;
+        box-shadow: 0 0 6px $yellow;
+        border-radius: 100px;
+        transform: translateX(-50%);
+    }
 
-    &_text1{
-        color: $dimedPrimary;
-        margin-bottom: 10px;
-        margin-top: 10px;
-        font-size: 25px;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        padding: 0px 10px;
-       
+    &:focus::after,
+    &:hover::after {
+        width: 100%;
+        left: 0;
+        transform: translateX(0);
     }
-    &_text2{
-        color: $dimedPrimary;
-        margin-bottom: 10px;
-        margin-top: 10px;
-        font-size: 25px;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        padding: 0px 10px;
-    }
+}
+
+.navbar_text1,
+.navbar_text2 {
+    color: $dimedPrimary;
+    font-size: 25px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 0px 20px;
 }
